--- a/style.css
+++ b/style.css
@@ -58,3 +58,42 @@ img.button {
     border: solid rgb(67, 161, 216);
   }
  
+button {
+    background-color: rgb(67, 161, 216);
+    border: 0;
+    cursor: pointer;
+    color: rgb(229, 243, 248);
+    font-size: 15px;
+    padding: 10px 25px;
+}
+.modal-container {
+    position: fixed;
+    background-color: rgb(67, 161, 216);;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    transition: opacity 0.5s ease;
+    pointer-events: none;
+}
+.modal-container.show {
+    opacity: 1;
+    pointer-events: auto;
+}
+.modal {
+    background-color: rgb(229, 243, 248);
+    padding: 50px 50px;
+    text-align: center;
+    width: 500px;
+}
+
+img.letter{
+    position: relative; 
+}
+img.stick{
+    float:right;
+}
